# screen-understanding-agent

./: .gitignore  LICENSE  README.md  alternative_ocr.py  decision_agent.py  environment.yml  init_project.py  models.py  pipeline.py  processors.py  pyproject.toml  service.py  session_cli.py  setup.sh  test_installation.py  utils.py
config/: default_config.json
data/: README.md
examples/: README.md  amazon_sample.element_actions.json  amazon_sample.first_element_action.json  example_usage.py
models/: README.md
pipeline_outputs/: united_sample_decision.from_test.json  united_sample_screen_understanding_output.json
pipeline_outputs/sessions/session_20250924_151105/: task.txt  thinking_latest.txt
pipeline_outputs/sessions/session_20250924_151105/step_1/: step_1_screen_understanding.json  step_1_thinking.json
pipeline_outputs/sessions/session_20250925_165550/: actions_history.json  task.txt  thinking_latest.txt
pipeline_outputs/sessions/session_20250925_165550/step_1/: step_1_screen_understanding.json  step_1_thinking.json
pipeline_outputs/sessions/session_20250925_165550/step_2/: step_2_screen_understanding.json  step_2_thinking.json
pipeline_outputs/sessions/session_20250925_165550/step_3/: step_3_screen_understanding.json  (+1 more)
tests/: README.md  test_pipeline.py  test_thinking_json.py
tests_slow/: test_decision_agent.py  test_element_action_single_vlm.py  test_element_actions_vlm.py  test_qwen_freeform_summary.py  test_som_like_outputs.py  test_thinking_json_slow.py
tests_slow/agent_test/: step_1_screen_understanding.json  thinking.json
